# Native-Code-Playground

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ir/erfansn/nativecodeplayground/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  another_file.cpp  example.c  jni_bind.h  native-lib.cpp
app/src/main/cpp/cmake/: common.cmake
app/src/main/cpp/include/: another_file.h
app/src/main/java/ir/erfansn/nativecodeplayground/: Company.kt  MainActivity.kt
app/src/main/java/ir/erfansn/nativecodeplayground/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/swig/: example-interface.i
app/src/test/java/ir/erfansn/nativecodeplayground/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
